# skill-kit

./: .gitignore  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: fix-dmg-background.sh  generate-dmg-background.py
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  operations.rs  parse.rs  paths.rs  registry.rs  scanning.rs  types.rs  watch.rs
src/components/: BootBanner.tsx  DebugPanel.tsx  Inspector.tsx  InstallDialog.tsx  SettingsPanel.tsx  Sidebar.tsx  SkillRow.tsx  ui.tsx
src/components/ui/: badges.tsx  button.tsx  buttons.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx
src/constants/: i18n.ts  platforms.ts
src/hooks/: useDebugLog.ts  usePreferences.ts
src/lib/: skills.ts  tauri.ts
