[package]
name = "skillkit"
version = "0.1.0"
description = "SkillKit for macOS"
authors = ["yanlixing"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "skillkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
anyhow = "1.0"
hex = "0.4"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
walkdir = "2.5"
notify = "6.1"
dirs-next = "2.0"
